mp3 andmetest episoodi lühikokkuvõte

--- a/content/episode/1.md
+++ b/content/episode/1.md
@@ -1,9 +1,11 @@
 ---
 title: "1: Nutisõltuvus"
+description: "Me oleme sõltlased, kuid eriti ei taha olla."
 date: 2018-06-24T00:00:00Z
 audio: "eisaaaru1.mp3"
 audio_length: 17080055
 audio_duration: "34:32"
+description: ""
 ---
 Teemad:
 
