--- a/content/episode/2.md
+++ b/content/episode/2.md
@@ -1,5 +1,6 @@
 ---
 title: "2: Harjumused"
+description: "Püüame mõista ja selgitada, kuidas edukalt harjumusi kujundada."
 date: 2018-07-08T00:00:00Z
 audio: "eisaaaru2.mp3"
 audio_length: 24131210
