--- a/content/episode/3.md
+++ b/content/episode/3.md
@@ -1,5 +1,6 @@
 ---
 title: "3: Isiklikud projektid"
+description: "Siim teeb arvutimänge ja Henno tahaks muusikat teha."
 date: 2018-07-22T00:00:00Z
 audio: "eisaaaru3.mp3"
 audio_length: 18675923
