--- a/content/episode/4.md
+++ b/content/episode/4.md
@@ -1,5 +1,6 @@
 ---
 title: "4: Suhted"
+description: "Suhted on keerulised, kuid neid saab huvitavalt vaadelda, tuvastada mustreid, nimetada mänge ja olla teadlik teesulgudest."
 date: 2018-08-05T00:00:00Z
 audio: "eisaaaru4.mp3"
 audio_length: 34128383
