eraldi lehed iga episoodi jaoks + parandused

--- a/content/episode/4.md
+++ b/content/episode/4.md
@@ -12,7 +12,7 @@ Teemad:
   1. Improviseerimine ja baasteadmised
   1. Kunstid, millest me ei saa aru
   1. Muusika programmeerimine ja teooria
-  1. Eric Bern - Mängud, mida inimesed mängivad
+  1. Eric Berne - Mängud, mida inimesed mängivad
   1. Robert Polton - Igapäevaoskused
   1. Tagasivaade: harjumuste hetkeseis
   1. Tervitused
@@ -20,4 +20,5 @@ Teemad:
 
 Viited:
 
-  * ...
+  * [Matt Farley veebisait](http://moternmedia.com)
+  * Eric Berne - [Mängud, mida inimesed mängivad](https://www.digar.ee/arhiiv/nlib-digar:242638)
