lisa ep5 ja paremad podcasti äpi bännerid

--- a/content/episode/4.md
+++ b/content/episode/4.md
@@ -22,3 +22,4 @@ Viited:
 
   * [Matt Farley veebisait](http://moternmedia.com)
   * Eric Berne - [Mängud, mida inimesed mängivad](https://www.digar.ee/arhiiv/nlib-digar:242638)
+  * Robert Bolton - [Igapäevaoskused](https://www.ester.ee/record=b4511883*est)
