--- a/content/episode/6.md
+++ b/content/episode/6.md
@@ -19,7 +19,8 @@ Teemad:
   9. Eetikakoodeks
   10. Lõpusõnad
 
-Lingid:
+Viited:
+
   * [Google & Maven](https://www.theverge.com/2018/6/1/17418406/google-maven-drone-imagery-ai-contract-expire)
   * [Microsoft & ICE](https://www.theverge.com/2018/6/21/17488328/microsoft-ice-employees-signatures-protest)
   * [Amazon & Law Enforcement](https://gizmodo.com/amazon-workers-demand-jeff-bezos-cancel-face-recognitio-1827037509)
