--- a/content/episode/5.md
+++ b/content/episode/5.md
@@ -19,7 +19,7 @@ Teemad:
   8. Oluline rattatee küsimus
   9. Vaba tahe
 
-Lingid:
+Viited:
 
   * Emaili erinevad tahud:
     * Saatmine: [Simple Mail Transfer Protocol](https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol)
