fix links in ep7

--- a/content/episode/7.md
+++ b/content/episode/7.md
@@ -37,5 +37,5 @@ Viited:
     * [Rodolfo C Barragani uurimus](https://news.stanford.edu/news/2014/december/altruism-triggers-innate-121814.html) (18k lapsed)
   * Annetamine
     * [TEDx Talk: Effective Altruism](https://youtu.be/LtWINl3C_7s)
-    * [GiveWell](givewell.org)
-    * [Kiva](kiva.org)
+    * [GiveWell](https://givewell.org)
+    * [Kiva](https://kiva.org)
