--- a/content/episode/49.md
+++ b/content/episode/49.md
@@ -1,6 +1,6 @@
 ---
 title: "49: Erinevad infoteekonnad"
-description: "Laulame ette mõned Lotte laulud, suurendame oma vokaalset dünaamilisust otsime väikest Myd ja arutleme, kas me oleme targemaks saanud või ei ole. Mis kõige tähtsam – avaldame kaks nädalat kestnud treeningu tulemused."
+description: "Laulame ette mõned Lotte laulud, suurendame oma vokaalset dünaamilisust, otsime väikest Myd ja arutleme, kas me oleme targemaks saanud või ei ole. Mis kõige tähtsam – avaldame kaks nädalat kestnud treeningu tulemused."
 date: 2020-07-01T13:14:03Z
 audio: "eisaaaru49.mp3"
 audio_length: 28857431
